--- a/.github/workflows/prj-move-sprint-items.yml
+++ b/.github/workflows/prj-move-sprint-items.yml
@@ -5,6 +5,9 @@ on:
     # Runs "at 05:00, only on Monday" (see https://crontab.guru)
     - cron: '15 * * * *'
 
+permissions:
+  repository-projects: write
+
 jobs:
   move-to-next-iteration:
     name: Move to next iteration
@@ -15,7 +18,7 @@ jobs:
       with:
         owner: smokifycc
         number: 1
-        token: ${{ secrets.PROJECT_PAT }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         iteration-field: Sprint
         iteration: last
         new-iteration: current
