--- a/.github/workflows/prj-move-sprint-items.yml
+++ b/.github/workflows/prj-move-sprint-items.yml
@@ -3,7 +3,7 @@ name: Move Project Cards
 on:
   schedule:
     # Runs "at 05:00, only on Monday" (see https://crontab.guru)
-    - cron: '15 * * * *'
+    - cron: '*/5 * * * *'
 
 permissions:
   repository-projects: write
