--- a/.github/workflows/prj-move-sprint-items.yml
+++ b/.github/workflows/prj-move-sprint-items.yml
@@ -1,9 +1,9 @@
 name: Move Project Cards
 
-on:
-  schedule:
+on: workflow_dispatch
+  #  schedule:
     # Runs "at 05:00, only on Monday" (see https://crontab.guru)
-    - cron: '*/5 * * * *'
+    #  - cron: '*/5 * * * *'
 
 permissions:
   repository-projects: write
